# swagger.json
@@ -171,19 +171,24 @@
             "schema": {
               "type": "object",
               "required": [
-                "from_wallet_id",
-                "to_wallet_id",
+                "from_wallet_uuid",
+                "to_wallet_uuid",
                 "amount"
               ],
               "properties": {
-                "from_wallet_id": {
-                  "type": "string"
+                "from_wallet_uuid": {
+                  "type": "string",
+                  "format": "uuid",
+                  "x-nullable": false
                 },
-                "to_wallet_id": {
-                  "type": "string"
+                "to_wallet_uuid": {
+                  "type": "string",
+                  "format": "uuid",
+                  "x-nullable": false
                 },
                 "amount": {
-                  "type": "integer"
+                  "type": "integer",
+                  "x-nullable": false
                 }
               }
             }
@@ -191,10 +196,28 @@
         ],
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Ok",
+            "schema": {
+              "$ref": "#/definitions/wallet"
+            }
           },
-          "405": {
-            "description": "Invalid input"
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "$ref": "#/definitions/simpleResponse"
+            }
+          },
+          "403": {
+            "description": "Permission denied",
+            "schema": {
+              "$ref": "#/definitions/simpleResponse"
+            }
+          },
+          "500": {
+            "description": "Invalid input",
+            "schema": {
+              "$ref": "#/definitions/simpleResponse"
+            }
           }
         }
       }
